# research-method-script

./: .env.example  .gitignore  README.md  pyproject.toml
data/: 128k-160k_1939.txt  128k-160k_49955.txt  128k-160k_55510.txt  128k-160k_6933.txt  160k-192k_25700.txt  160k-192k_49468.txt  160k-192k_49987.txt  160k-192k_55824.txt  prompts.json  story1.txt
output/: results.csv  results.json  results_analysis.md  results_summary.json  selected_files.json  statistical_analysis.md  train_word_counts.json  word_counts.json
scripts/: prepare_data.py  train_word_count.py  visualize.py  word_count.py
src/lost_in_the_middle/: __init__.py  analyze.py  api_client.py  config.py  context_builder.py  display.py  evaluation.py  experiment.py  prompts.py  results_io.py
src/lost_in_the_middle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
