[project]
name = "lost-in-the-middle-experiment"
version = "0.1.0"
description = "Experiment: How instruction placement in long prompts affects LLM accuracy (Lost in the Middle effect)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "numpy>=1.26",
]

[project.scripts]
experiment = "lost_in_the_middle.experiment:main"
analyze = "lost_in_the_middle.analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lost_in_the_middle"]
